--- a/taticas-de-desenho/style.css
+++ b/taticas-de-desenho/style.css
@@ -20,6 +20,31 @@ header h1 {
     font-weight: 300;
 }
 
+nav {
+    margin: 0;
+    padding: 0;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
 main {
     padding: 20px;
 }
