--- a/css3-recursos/css/style.css
+++ b/css3-recursos/css/style.css
@@ -19,5 +19,9 @@
 #caixa{
     width: 300px;
     height: 300px;
-    background: #b9c941;
+    background: url("../imagens/camera.png");
+}
+
+#caixa h1{
+    background: rgba( 255, 255, 255, 009);
 }
