--- a/taticas-de-desenho/style.css
+++ b/taticas-de-desenho/style.css
@@ -19,30 +19,35 @@ header h1 {
     font-family: "Edu AU VIC WA NT Hand", cursive;
     font-weight: 300;
 }
-
 nav {
-    margin: 0;
-    padding: 0;
+    background: #333;
+    padding: 10px 0;
 }
 
 nav ul {
     list-style: none;
+    margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
 }
 
 nav ul li {
-    display: inline;
-    margin: 0 10px;
+    margin: 0 15px;
 }
 
 nav ul li a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
+    padding: 5px 10px;
+    display: inline-block;
 }
 
 nav ul li a:hover {
-    text-decoration: underline;
+    background: #fff;
+    color: #333;
+    border-radius: 5px;
 }
 
 main {
