correção de código

--- a/taticas-de-desenho/css/style.css
+++ b/taticas-de-desenho/css/style.css
@@ -76,7 +76,7 @@ img{
 }
 
 span{
-    font-family: "Edu AU VIC WA NT Hand", cursive;
+    font-family: "Edu Hand", cursive;
     font-weight: 300;
 }
 
