--- a/taticas-de-desenho/css/style.css
+++ b/taticas-de-desenho/css/style.css
@@ -20,10 +20,10 @@ header {
 
 header h1 {
     margin: 0;
-    font-family: "Edu Hand", cursive;
     font-weight: 300;
 }
 nav {
+    border-top: 1px black solid;
     background: #333;
     padding: 10px 0;
 }
@@ -43,7 +43,7 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: #fff;
-    font-weight: bold;
+    font-weight: 400;
     padding: 5px 10px;
     display: inline-block;
 }
@@ -51,11 +51,21 @@ nav ul li a {
 nav ul li a:hover {
     background: #fff;
     color: #333;
+    padding: 10px;
+    margin: 0 15px;
     border-radius: 5px;
 }
 
 main {
     padding: 20px;
+}
+
+main section #title {
+    text-align: center;
+}
+
+main section {
+    font-family: 'Courier New', Courier, monospace;
 }
 
 section {
@@ -75,8 +85,12 @@ img{
     border-radius: 9px;
 }
 
+#lista{
+    font-family: 'Courier New', Courier, monospace;
+}
+
 span{
-    font-family: "Edu Hand", cursive;
+    font-family: cursive;
     font-weight: 300;
 }
 
