--- a/css3-recursos/css/estilo.css
+++ b/css3-recursos/css/estilo.css
@@ -1,16 +1,101 @@
 @keyframes the-box {
     from {
         background: rgb(255, 116, 92);
+        -webkit-background: rgb(255, 116, 92);
+        -moz-background: rgb(255, 116, 92);
+        -o-background: rgb(255, 116, 92);
     }
     to {
-        background: rgba(101, 206, 101, 0.737);
+        background: rgba(238, 144, 3, 0.737);
+        -webkit-background: rgba(238, 144, 3, 0.737);
+        -moz-background: rgba(238, 144, 3, 0.737);
+        -o-background: rgba(238, 144, 3, 0.737);
+
+        border-radius: 300px;
+        -webkit-border-radius: 300px;
+        -moz-border-radius: 300px;
+        -o-border-radius: 300px;
+    }
+}
+
+@-webkit-keyframes the-box {
+    from {
+        background: rgb(255, 116, 92);
+        -webkit-background: rgb(255, 116, 92);
+        -moz-background: rgb(255, 116, 92);
+        -o-background: rgb(255, 116, 92);
+    }
+    to {
+        background: rgba(238, 144, 3, 0.737);
+        -webkit-background: rgba(238, 144, 3, 0.737);
+        -moz-background: rgba(238, 144, 3, 0.737);
+        -o-background: rgba(238, 144, 3, 0.737);
+
+        border-radius: 300px;
+        -webkit-border-radius: 300px;
+        -moz-border-radius: 300px;
+        -o-border-radius: 300px;
+    }
+}
+
+@-moz-keyframes the-box {
+    from {
+        background: rgb(255, 116, 92);
+        -webkit-background: rgb(255, 116, 92);
+        -moz-background: rgb(255, 116, 92);
+        -o-background: rgb(255, 116, 92);
+    }
+    to {
+        background: rgba(238, 144, 3, 0.737);
+        -webkit-background: rgba(238, 144, 3, 0.737);
+        -moz-background: rgba(238, 144, 3, 0.737);
+        -o-background: rgba(238, 144, 3, 0.737);
+
+        border-radius: 300px;
+        -webkit-border-radius: 300px;
+        -moz-border-radius: 300px;
+        -o-border-radius: 300px;
+    }
+}
+
+@-o-keyframes the-box {
+    from {
+        background: rgb(255, 116, 92);
+        -webkit-background: rgb(255, 116, 92);
+        -moz-background: rgb(255, 116, 92);
+        -o-background: rgb(255, 116, 92);
+    }
+    to {
+        background: rgba(238, 144, 3, 0.737);
+        -webkit-background: rgba(238, 144, 3, 0.737);
+        -moz-background: rgba(238, 144, 3, 0.737);
+        -o-background: rgba(238, 144, 3, 0.737);
+
+        border-radius: 300px;
+        -webkit-border-radius: 300px;
+        -moz-border-radius: 300px;
+        -o-border-radius: 300px;
     }
 }
 
 #caixa {
     width: 300px;
+    -webkit-width: 300px;
+    -moz-width: 300px;
+    -o-width: 300px;
+
     height: 300px;
+    -webkit-height: 300px;
+    -moz-height: 300px;
+    -o-height: 300px;
+
     background: red;
-    animation-name: the-box;
-    animation-duration: 5s;
+    -webkit-background: red;
+    -moz-background: red;
+    -o-background: red;
+
+    animation: the-box 5s 2s 1000 alternate;
+    -webkit-animation: the-box 5s 2s 1000 alternate;
+    -moz-animation: the-box 5s 2s 1000 alternate;
+    -o-animation: the-box 5s 2s 1000 alternate;
 }
