--- a/taticas-de-desenho/css/style.css
+++ b/taticas-de-desenho/css/style.css
@@ -34,3 +34,11 @@ span {
     font-family: "Edu Hand", cursive;
     font-weight: 300;
 }
+
+h2 {
+    text-align: center;
+}
+
+#pag {
+    color: #8c8c8c;
+}
