--- a/spotify/css/estilo.css
+++ b/spotify/css/estilo.css
@@ -20,9 +20,9 @@ body {
 
 /* Barra de navegação
 -----------------------------*/
-nav.navbar-transparente {
+nav.navbar-peta {
 	padding: 15px 0px;
-	background: rgba(0,0,0,0.6);
+	background: black;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -30,7 +30,11 @@ nav.navbar-transparente {
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-	color: #9bf0e1;
+	color: rgb(94, 255, 94);
+}
+
+.nav-link:hover {
+	color: rgb(94, 255, 94);
 }
 
 .navbar-light .navbar-toggler {
