correção de código

--- a/spotify/css/estilo.css
+++ b/spotify/css/estilo.css
@@ -20,7 +20,7 @@ body {
 
 /* Barra de navegação
 -----------------------------*/
-nav.navbar-peta {
+nav .navbar-preta {
 	padding: 15px 0px;
 	background: black;
 }
