--- a/spotify/css/estilo.css
+++ b/spotify/css/estilo.css
@@ -20,9 +20,9 @@ body {
 
 /* Barra de navegação
 -----------------------------*/
-nav .navbar-preta {
+nav .navbar-transparente {
 	padding: 15px 0px;
-	background: black;
+	background: rgba(0, 0, 0, 0.6);
 }
 
 .navbar-light .navbar-nav .nav-link {
